--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
             "username": "Sergio Martínez Aznar",
             "year": "2025"
         }
-    }
+    },
+    "editor.wordWrap": "on"
 }
