--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,5 +8,12 @@
         "vadimcn.vscode-lldb",
         "doi.fileheadercomment",
         "wayou.vscode-todo-highlight",
+        "ms-vscode.cpptools",
+        "vadimcn.vscode-lldb",
+        "disroop.conan",
+        "mhutchie.git-graph",
+        "ms-vscode.hexeditor",
+        "mathematic.vscode-pdf",
+        "streetsidesoftware.code-spell-checker-spanish"
     ]
 }
