--- a/.github/workflows/build_documentation.yaml
+++ b/.github/workflows/build_documentation.yaml
@@ -3,7 +3,7 @@ name: Build Documentation
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'docs/**'
   workflow_dispatch:
