feat(gui): Plot functions for Data Capturer View

--- a/packages/neural_analytics_gui/Cargo.toml
+++ b/packages/neural_analytics_gui/Cargo.toml
@@ -10,6 +10,7 @@ description = "GUI interface for Neural Analytics project"
 slint = { version = "1.10.0", default-features = true, features = ["renderer-skia"] }
 presage = "0.3.0"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
+plotters = "0.3.7"
 
 # Workspace dependencies
 neural_analytics_core = { path = "../neural_analytics_core" }
