--- a/packages/neural_analytics_core/Cargo.toml
+++ b/packages/neural_analytics_core/Cargo.toml
@@ -19,6 +19,6 @@ async-trait = "0.1.88"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.99"
 statig = { version = "0.3.0", features = ["serde", "std", "async"] }
-# brainflow = { path = "/root/brainflow/rust_package/brainflow" }
+brainflow = { path = "/Users/neirth/Vendors/brainflow/rust_package/brainflow" }
 tract = "0.21.9"
 log = "0.4.17"
