--- a/packages/neural_analytics_core/Cargo.toml
+++ b/packages/neural_analytics_core/Cargo.toml
@@ -11,7 +11,6 @@ neural_analytics_model = { path = "../neural_analytics_model" }
 
 tapo = "0.8.0"
 chrono = "0.4.38"
-blackbox_di = "0.1.1"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 
 presage = "0.3.0"
@@ -21,4 +20,7 @@ serde_json = "1.0.99"
 statig = { version = "0.3.0", features = ["serde", "std", "async"] }
 brainflow = { path = "/Users/neirth/Vendors/brainflow/rust_package/brainflow" }
 tract = "0.21.9"
+tract-onnx = "0.21.9"
 log = "0.4.17"
+rand = "0.8"
+once_cell = "1.17.2"
