--- a/packages/neural_analytics_core/Cargo.toml
+++ b/packages/neural_analytics_core/Cargo.toml
@@ -30,3 +30,7 @@ once_cell = "1.18.0"
 tract-onnx = "0.21.1"
 ndarray = "0.15.6"
 anyhow = "1.0.75"
+
+[dev-dependencies]
+mockall = "0.11.3"
+tempfile = "3.20.0"
